--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ body {
   background-image: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
 }
 .card-container {
-  height: 650px;
-  width: 90%;
+  height: auto;
+  width: 80%;
   border-radius: 30px;
   background-color: #fff;
   font-family: "Kumbh Sans", sans-serif;
@@ -56,6 +56,13 @@ body {
   align-items: center;
   cursor: pointer;
   position: relative;
+  margin: 1.5rem 0;
+}
+.single-question:nth-child(1) {
+  margin-top: 0;
+}
+.single-question:nth-child(5) {
+  margin-bottom: 5rem;
 }
 .single-question::after {
   content: "";
@@ -91,4 +98,70 @@ body {
 }
 .show-answer {
   display: block;
+}
+.desktop-card-container {
+  display: none;
+}
+.woman-img-desktop {
+  position: absolute;
+  left: -13%;
+  top: 30%;
+  transform: translate(0, -30%);
+}
+.shadow-img-desktop {
+  position: absolute;
+  top: 75%;
+  left: -100%;
+  transform: translate(0, -75%);
+}
+.box-img {
+  position: absolute;
+  top: 50%;
+  left: -95px;
+  transform: translate(0%, -50%);
+  z-index: 2;
+}
+@media screen and (min-width: 1280px) {
+  .mobile-card-container {
+    display: none;
+  }
+  .desktop-card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  .card-container {
+    width: 60%;
+    min-height: 600px;
+  }
+  .img-container {
+    flex: 1;
+    min-height: 600px;
+    overflow: hidden;
+  }
+  .questions-container {
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .questions {
+    width: 80%;
+  }
+  .single-question span,
+  .single-question::after,
+  .answer {
+    width: 100%;
+  }
+  .single-question:nth-child(1) {
+    margin-top: 1rem;
+  }
+  .single-question:nth-child(5) {
+    margin-bottom: 0;
+  }
+  .faq-title {
+    text-align: start;
+  }
 }
