--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 
 body {
   height: 100vh;
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,7 +15,7 @@ body {
 }
 .card-container {
   height: auto;
-  width: 80%;
+  width: 90%;
   border-radius: 30px;
   background-color: #fff;
   font-family: "Kumbh Sans", sans-serif;
@@ -47,7 +46,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 .single-question {
   width: 100%;
@@ -107,21 +106,20 @@ body {
 }
 .woman-img-desktop {
   position: absolute;
-  left: -13%;
-  top: 30%;
-  transform: translate(0, -30%);
+  left: -10%;
+  top: 50%;
+  transform: translate(-8%, -50%);
 }
 .shadow-img-desktop {
   position: absolute;
-  top: 75%;
-  left: -100%;
+  top: 90%;
+  left: -120%;
   transform: translate(0, -75%);
 }
 .box-img {
   position: absolute;
-  top: 50%;
-  left: -95px;
-  transform: translate(0%, -50%);
+  top: 42%;
+  left: -13%;
   z-index: 2;
 }
 @media screen and (min-width: 1280px) {
@@ -135,12 +133,12 @@ body {
     position: relative;
   }
   .card-container {
-    width: 60%;
-    min-height: 600px;
+    width: 1000px;
+    min-height: 60%;
   }
   .img-container {
     flex: 1;
-    min-height: 600px;
+    height: 500px;
     overflow: hidden;
   }
   .questions-container {
